Acabo de agregar mi nombre

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Mi Proyecto</title>
 </head>
 <body>
-<h1></h1>
+<h1>Julio Izquierdo Mejia - Portafolio</h1>
 <h2></h2>
 <img src="">
 </body>
