--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Julio Izquierdo Mejia - Portafolio</h1>
-<h2></h2>
+<h2>Developer WEB - Front End</h2>
 <img src="">
 </body>
 </html>
