--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 </head>
 <body>
-<h1>Julio Izquierdo Mejia - Portafolio</h1>
-<h2>Developer WEB - Front End</h2>
-<img src="https://pbs.twimg.com/profile_images/2824058364/8a2a0210287dd79b0ab31ace9401d4e5_400x400.png" width="200" height="200">
-<h3>Ingenia Soluciones SAC</h3>
+    <div class="todo">
+        <h1>Julio Izquierdo Mejia - Portafolio</h1>
+        <h2>Developer WEB - Front End</h2>
+        <img src="https://pbs.twimg.com/profile_images/2824058364/8a2a0210287dd79b0ab31ace9401d4e5_400x400.png" width="200" height="200">
+        <h3>Ingenia Soluciones SAC</h3>
+    </div>
 </body>
 </html>
