--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 
 </head>
 <body>
+	<div class="menu">
+    		<ul>
+    			<li><a href="#">A cerca de</a></li>
+    			<li><a href="#">Trabajos</a></li>
+    			<li><a href="#">Servicios</a></li>
+    			<li><a href="#">Contactenos</a></li>
+    		</ul>
+    </div>
     <div class="todo">
+    	
         <h1>Julio Izquierdo Mejia - Portafolio</h1>
         <h2>Developer WEB - Front End</h2>
         <img src="https://pbs.twimg.com/profile_images/2824058364/8a2a0210287dd79b0ab31ace9401d4e5_400x400.png" width="200" height="200">
