--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
 	<div class="menu">
     		<ul>
-    			<li><a href="#">Acerca de</a></li>
-    			<li><a href="#">Trabajos</a></li>
+    			<li><a href="#">Bio</a></li>
+    			<li><a href="#">Portafolio</a></li>
     			<li><a href="#">Servicios</a></li>
-    			<li><a href="#">Contactenos</a></li>
+    			<li><a href="#">Contáctame</a></li>
     		</ul>
     </div>
     <div class="todo">
