--- a/index.html
+++ b/index.html
@@ -18,20 +18,27 @@
 
     <div id="fullpage">
         <div class="section">
-            <div class="menu">
-    		<ul>
-    			<li><a href="#">Bio</a></li>
-    			<li><a href="#">Portafolio</a></li>
-    			<li><a href="#">Servicios</a></li>
-    			<li><a href="#">Contáctame</a></li>
-    		</ul>
-            </div>
             <div class="todo">
-
                 <h1>Julio Izquierdo Mejia - Portafolio</h1>
                 <h2>Developer WEB - Front End</h2>
                 <img src="https://pbs.twimg.com/profile_images/2824058364/8a2a0210287dd79b0ab31ace9401d4e5_400x400.png" width="200" height="200">
-                <h3>Grupo Ingenia SAC</h3>
+                <h3>Grupo Ingenia</h3>
+            </div>
+        </div>
+        <div class="section">
+            <div class="todo">
+                <h1>Enrique Sánchez Q. - Portafolio</h1>
+                <h2>Senior Developer - Front End</h2>
+                <img src="https://avatars0.githubusercontent.com/u/1436997?v=3&s=460" width="200" height="200">
+                <h3>Grupo Ingenia</h3>
+            </div>
+        </div>
+        <div class="section">
+            <div class="todo">
+                <h1>Brando Félix Martin Izquierdo Mejía - Portafolio</h1>
+                <h2>Junior Developer - Front End</h2>
+                <img src="https://avatars2.githubusercontent.com/u/11338201?v=3&s=460" width="200" height="200">
+                <h3>Grupo Ingenia</h3>
             </div>
         </div>
         <div class="section">
@@ -40,8 +47,6 @@
             <div class="slide" data-anchor="slide3"> Slide 3 </div>
             <div class="slide" data-anchor="slide4"> Slide 4 </div>
         </div>
-        <div class="section">Some section</div>
-        <div class="section">Some section</div>
     </div>
 </body>
 </html>
