cambio de colores

--- a/index.html
+++ b/index.html
@@ -19,33 +19,39 @@
     <div id="fullpage">
         <div class="section">
             <div class="todo">
-                <h1>Julio Izquierdo Mejia - Portafolio</h1>
+                <h1 class="hjulio">Julio Izquierdo Mejia - Portafolio</h1>
                 <h2>Developer WEB - Front End</h2>
-                <img src="https://pbs.twimg.com/profile_images/2824058364/8a2a0210287dd79b0ab31ace9401d4e5_400x400.png" width="200" height="200">
+                <img class="imhJ" src="https://pbs.twimg.com/profile_images/2824058364/8a2a0210287dd79b0ab31ace9401d4e5_400x400.png" width="200" height="200">
                 <h3>Grupo Ingenia</h3>
             </div>
         </div>
         <div class="section">
             <div class="todo">
-                <h1>Enrique Sánchez Q. - Portafolio</h1>
+                <h1 class="hkike">Enrique Sánchez Q. - Portafolio</h1>
                 <h2>Senior Developer - Front End</h2>
-                <img src="https://avatars0.githubusercontent.com/u/1436997?v=3&s=460" width="200" height="200">
+                <img class="imhK" src="https://avatars0.githubusercontent.com/u/1436997?v=3&s=460" width="200" height="200">
                 <h3>Grupo Ingenia</h3>
             </div>
         </div>
         <div class="section">
             <div class="todo">
-                <h1>Brando Félix Martin Izquierdo Mejía - Portafolio</h1>
+                <h1 class="hbrando">Brando Félix Martin Izquierdo Mejía - Portafolio</h1>
                 <h2>Junior Developer - Front End</h2>
-                <img src="https://avatars2.githubusercontent.com/u/11338201?v=3&s=460" width="200" height="200">
+                <img class="imhB" src="https://avatars2.githubusercontent.com/u/11338201?v=3&s=460" width="200" height="200">
                 <h3>Grupo Ingenia</h3>
             </div>
         </div>
         <div class="section">
-            <div class="slide" data-anchor="slide1"> Slide 1 </div>
-            <div class="slide" data-anchor="slide2"> Slide 2 </div>
-            <div class="slide" data-anchor="slide3"> Slide 3 </div>
-            <div class="slide" data-anchor="slide4"> Slide 4 </div>
+            <div class="todo">
+                <h1 class="hadri">Adrián Coronel - Portafolio</h1>
+                <h2>Camarographer - Editor</h2>
+                <img class="imhA" src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/11003_10206310965235545_4269800884263772164_n.jpg?oh=41b73a96dec9283e6e8d1896e4e905e2&oe=55834194&__gda__=1437367381_3a70b35f74460a97c55ff769be396efd" width="200" height="200">
+                <h3>Grupo Ingenia</h3>
+            </div>
+            <!--<div class="slide" data-anchor="slide1"></div>
+            <div class="slide" data-anchor="slide2"></div>
+            <div class="slide" data-anchor="slide3"></div>
+            <div class="slide" data-anchor="slide4"></div>-->
         </div>
     </div>
 </body>
