--- a/index.html
+++ b/index.html
@@ -43,16 +43,36 @@
             </div>
         </div>
         <div class="section" id="section3">
-            <div class="todo">
+            <!--<div class="todo">
                 <h1 class="hadri">Adrián Coronel - Portafolio</h1>
                 <h2>Camarographer - Editor</h2>
                 <img class="imhA" src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/11003_10206310965235545_4269800884263772164_n.jpg?oh=41b73a96dec9283e6e8d1896e4e905e2&oe=55834194&__gda__=1437367381_3a70b35f74460a97c55ff769be396efd" width="200" height="200">
                 <h3>Grupo Ingenia</h3>
+            </div>-->
+            <div class="slide" data-anchor="slide1">
+                <div class="todo">
+                    <h1 class="hadri">Adrián Coronel - Portafolio</h1>
+                    <h2>Camarographer - Editor</h2>
+                    <img class="imhA" src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/11003_10206310965235545_4269800884263772164_n.jpg?oh=41b73a96dec9283e6e8d1896e4e905e2&oe=55834194&__gda__=1437367381_3a70b35f74460a97c55ff769be396efd" width="200" height="200">
+                    <h3>Grupo Ingenia</h3>
+                </div>
             </div>
-            <!--<div class="slide" data-anchor="slide1"></div>
-            <div class="slide" data-anchor="slide2"></div>
-            <div class="slide" data-anchor="slide3"></div>
-            <div class="slide" data-anchor="slide4"></div>-->
+            <div class="slide" data-anchor="slide2">
+                <div class="todo">
+                    <h1 class="hadri">Adrián Coronel - Portafolio</h1>
+                    <h2>Camarographer - Editor</h2>
+                    <img class="imhA" src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/11003_10206310965235545_4269800884263772164_n.jpg?oh=41b73a96dec9283e6e8d1896e4e905e2&oe=55834194&__gda__=1437367381_3a70b35f74460a97c55ff769be396efd" width="200" height="200">
+                    <h3>Grupo Ingenia</h3>
+                </div>
+            </div>
+            <div class="slide" data-anchor="slide3">
+                <div class="todo">
+                    <h1 class="hadri">Adrián Coronel - Portafolio</h1>
+                    <h2>Camarographer - Editor</h2>
+                    <img class="imhA" src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/11003_10206310965235545_4269800884263772164_n.jpg?oh=41b73a96dec9283e6e8d1896e4e905e2&oe=55834194&__gda__=1437367381_3a70b35f74460a97c55ff769be396efd" width="200" height="200">
+                    <h3>Grupo Ingenia</h3>
+                </div>
+            </div>
         </div>
     </div>
 </body>
