cambio de color de fondo del logo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/jquery.fullPage.css">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
     
+    <!-- TweenMax -->
+	<script type="text/javascript" src='js/greensock/TweenMax.min.js'></script>
+    
     <script type="text/javascript" src='js/jquery-1.10.1.min.js'></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/jquery.fullPage.js"></script>
@@ -43,13 +46,7 @@
             </div>
         </div>
         <div class="section" id="section3">
-            <!--<div class="todo">
-                <h1 class="hadri">Adrián Coronel - Portafolio</h1>
-                <h2>Camarographer - Editor</h2>
-                <img class="imhA" src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/11003_10206310965235545_4269800884263772164_n.jpg?oh=41b73a96dec9283e6e8d1896e4e905e2&oe=55834194&__gda__=1437367381_3a70b35f74460a97c55ff769be396efd" width="200" height="200">
-                <h3>Grupo Ingenia</h3>
-            </div>-->
-            <div class="slide" data-anchor="slide1">
+            <div class="slide" data-anchor="info">
                 <div class="todo">
                     <h1 class="hadri">Adrián Coronel - Portafolio</h1>
                     <h2>Camarographer - Editor</h2>
